<resources>
    <string name="app_name">Expenses Manager</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Expenses Manager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!--menu-->
    <string name="dashboard">Dashboard</string>
    <string name="statistic">Statistic</string>
    <string name="logout">Logout</string>

    <!--header-->
    <string name="hd_name">Lee Hooi</string>
    <string name="hd_email">leehooi1997@hotmail.com</string>

    <!--drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Fragment -->
    <string name="db_title">Dashboard</string>
    <string name="stc_title">Statistic</string>
    <string name="nt_title">New Transaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--activity new-->
    <string name="hint_amount">Amount</string>
    <string name="hint_types">Types</string>
    <string name="btn_senddb">Send to Firebase</string>

</resources>